--- a/Practica-4/index.html
+++ b/Practica-4/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario</title>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <h1>Gestión de usuarios</h1>
@@ -16,7 +17,7 @@
 
     <h2>Mostrar usuarios</h2>
     <form action="index.php" method="post">
-        <button type="button" name="select">Mostrar usuarios</button>
+        <button type="submit" name="select" id="selectButton">Mostrar usuarios</button>
     </form>
 
     <h2>Actualizar usuario</h2>
